<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="dev.qbikkx.keepsolidone.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_input"
        android:hint="@string/et_input_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_input">
        <Button
            android:id="@+id/btn_send"
            android:text="@string/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginEnd="@dimen/btn_margin"
             />
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:layout_toEndOf="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginStart="@dimen/btn_margin"/>
    </RelativeLayout>

</RelativeLayout>
