<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.qbikkx.keepsolidone.fragments.UserFragment">

    <RelativeLayout
        android:id="@+id/rl_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="?android:listSeparatorTextViewStyle">
    <TextView
        android:id="@+id/tv_sender_user_name"
        android:textSize="@dimen/default_text_size"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_sender_is_online"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="@dimen/btn_margin"
        android:contentDescription="@string/iv_is_online" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_sender_email"
        android:textSize="@dimen/default_text_size"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/iv_sender_category"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_sender_email"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="@dimen/btn_margin"
        android:contentDescription="@string/iv_user_caterogy" />
    <TextView
        android:id="@+id/tv_sender_category"
        android:textSize="@dimen/default_text_size"
        android:layout_toEndOf="@id/iv_sender_category"
        android:layout_below="@+id/tv_sender_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_sender_category">
        <Button
            android:id="@+id/btn_confirm"
            android:text="@string/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_toEndOf="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"/>
    </RelativeLayout>
</RelativeLayout>
